20150623teddy(完善一些界面的搭建)

--- a/ShanHongProject/Main.storyboard
+++ b/ShanHongProject/Main.storyboard
@@ -113,12 +113,18 @@
                                 <state key="normal" image="project.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="lVu-jk-Bh9" kind="push" id="kme-0K-9o3"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8kf-qc-t48">
                                 <rect key="frame" x="16" y="134" width="60" height="60"/>
                                 <state key="normal" image="flood.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Pyl-QX-Mm5" kind="push" id="rnN-wk-SmO"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXH-D2-fwt">
                                 <rect key="frame" x="92" y="244" width="60" height="60"/>
@@ -341,7 +347,9 @@
                             <constraint firstAttribute="trailing" secondItem="IpK-ce-Etp" secondAttribute="trailing" id="vYC-4W-7Su"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="气象国土" id="07u-YN-2hw"/>
+                    <navigationItem key="navigationItem" title="气象国土" id="07u-YN-2hw">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="i4l-ls-xMv"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="myTableView" destination="IpK-ce-Etp" id="jMe-kV-9XG"/>
                     </connections>
@@ -479,7 +487,9 @@
                             <constraint firstItem="bwk-J9-HTL" firstAttribute="top" secondItem="uGh-33-ud6" secondAttribute="bottom" constant="8" id="yBk-N3-Iok"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="天气预报" id="MPV-6U-HOn"/>
+                    <navigationItem key="navigationItem" title="天气预报" id="MPV-6U-HOn">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="N1T-cT-Ubb"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="currentImage" destination="bwk-J9-HTL" id="ciK-Bp-XBI"/>
                         <outlet property="currentStation" destination="U4w-d6-A7y" id="uzc-nJ-NS6"/>
@@ -498,7 +508,73 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xZR-Ig-Sdx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-673" y="777"/>
+            <point key="canvasLocation" x="-768" y="759"/>
+        </scene>
+        <!--工情信息-->
+        <scene sceneID="MPY-kd-V9F">
+            <objects>
+                <viewController id="lVu-jk-Bh9" customClass="ProjectViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aWf-cL-5hS"/>
+                        <viewControllerLayoutGuide type="bottom" id="1yE-FV-hyf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8xX-et-oV8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="ZTP-N2-LlE">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="工情信息" id="oY3-bP-cPV">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="KB1-eY-9Hp"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="ZTP-N2-LlE" id="iDG-oV-lJE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jdx-H8-kya" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-311" y="777"/>
+        </scene>
+        <!--当前汛情-->
+        <scene sceneID="icS-Bk-4RV">
+            <objects>
+                <viewController id="Pyl-QX-Mm5" customClass="FloodViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="asx-0y-faT"/>
+                        <viewControllerLayoutGuide type="bottom" id="z4r-Wt-ob7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gij-VP-Ma8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="a2x-1j-aMG">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="a2x-1j-aMG" secondAttribute="trailing" id="3vi-xW-eYF"/>
+                            <constraint firstAttribute="bottom" secondItem="a2x-1j-aMG" secondAttribute="bottom" id="4LB-w2-gTa"/>
+                            <constraint firstItem="a2x-1j-aMG" firstAttribute="leading" secondItem="gij-VP-Ma8" secondAttribute="leading" id="R1D-1h-aLk"/>
+                            <constraint firstItem="a2x-1j-aMG" firstAttribute="top" secondItem="gij-VP-Ma8" secondAttribute="top" id="eMG-8q-G7w"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="当前汛情" id="zAp-ol-LjG">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="A13-mP-FyM"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="myTableView" destination="a2x-1j-aMG" id="2W4-eY-FYD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R75-ac-edv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1079" y="-560"/>
         </scene>
         <!--雨情信息-->
         <scene sceneID="w78-L6-GoG">
@@ -525,7 +601,9 @@
                             <constraint firstAttribute="bottom" secondItem="BjP-OT-xse" secondAttribute="bottom" id="yAY-y2-TkV"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="雨情信息" id="d8k-fc-QSJ"/>
+                    <navigationItem key="navigationItem" title="雨情信息" id="d8k-fc-QSJ">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="bgf-nD-bHc"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="myTableView" destination="BjP-OT-xse" id="pWV-pV-Tzx"/>
                     </connections>
@@ -559,7 +637,9 @@
                             <constraint firstAttribute="trailing" secondItem="Y63-an-B2M" secondAttribute="trailing" id="xzo-eo-u3d"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="水情信息" id="xwl-sw-Yf4"/>
+                    <navigationItem key="navigationItem" title="水情信息" id="xwl-sw-Yf4">
+                        <barButtonItem key="backBarButtonItem" title="返回" id="RNu-3c-JDT"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="myTableView" destination="Y63-an-B2M" id="Cyh-fg-HJM"/>
                     </connections>
